--- a/Tema 4/JavaScript/NotaExamen.html
+++ b/Tema 4/JavaScript/NotaExamen.html
@@ -51,9 +51,9 @@
     <!-- Campo de entrada solo para las correctas -->
     <p>Preguntas Correctas <input type="number" name="valor1" class="valor1" min="0" max="27"></p>
     <div>
-        <label><input type="radio" name="hora" data-penalizacion="0.1"> -1 hora (cada fallo resta 0.1)</label>
-        <label><input type="radio" name="hora" data-penalizacion="0.2"> -12 horas (cada fallo resta 0.2)</label>
-        <label><input type="radio" name="hora" data-penalizacion="0.3"> -24 horas (cada fallo resta 0.3)</label>
+        <label><input type="radio" name="hora" data-penalizacion="0.1"> -12 hora (cada fallo resta 0.1)</label>
+        <label><input type="radio" name="hora" data-penalizacion="0.2"> -24 horas (cada fallo resta 0.2)</label>
+        <label><input type="radio" name="hora" data-penalizacion="0.3"> +24 horas (cada fallo resta 0.3)</label>
     </div>
     <br>
     <!-- Botón para calcular la nota -->
